--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@astrojs/rss": "4.0.5",
 		"@astrojs/sitemap": "3.1.1",
 		"@astrojs/tailwind": "5.1.0",
+		"@unpic/astro": "^0.0.44",
 		"astro": "4.5.5",
 		"astro-expressive-code": "^0.33.5",
 		"astro-icon": "^1.1.0",
